 * No longer attempts to identify internal referal links
 * Don't attempt to rewrite internal requests

2008-12-04 cjg
 * Fixed bug in workflow which meant it assumed the primary key was "eprintid"
    even on the user dataset. Resolving #3403.
 * Trivial documentation fix, closing #3454.
 * Fixed bug in creating a static .html from a .xhtml file. Fixes #3390. 
 * Now when you add a document or modify one, it's always unrolled when the
    form renders just after. Closes #2938.
 * Fixed jitters on help when it unfearls using javascript.
 * Document fields can now be marked as required, and will have the star
    appear and report problems if not set. Fixes #3195
 * Can now use <upload-methods> option in upload component config to set which
    methods are available to upload files (or set to none to stop new 
    documents being created). Fixing #3450
 * Fixed some non-i18l phrases in Upload.
 * Less confusing error message for missing citation files. Fixes #3369.
 
2008-12-04 cjg
 * Fixed oddity that toolbox.pm defined toolkit.pm. Closes #3464

2008-12-05 tdb
 * Always test "index.html" when deciding whether to update abstract page,
    fixing #3479

2008-12-05 cjg
 * Counts on view-by-name were broken, now not. Fixed #3477.
 * Links to empty pages are now rendered as text, not links. Fixes #3476.
 * Browse by name no longer spits warnings if given part isn't there. #3478

2008-12-08 tdb
 * Use get_plugin_class to determine the Plugin class, fixes #3428
 * Fixed EPrints invalid user errors when starting indexer from apache

2008-12-12 tdb
 * Support plugin "tools" in saved searches, fixing #3462

2008-12-12 cjg
 * Fixed IE issues in javascript toggles recently introduced.

2008-12-17 tdb
 * Added maxlength of 16384 to Longtext field type (otherwise Import "cleans
    up" data to 255 chars)

2008-12-17 tdb
 * Can now use Subject input component with other fields in a workflow

2008-12-19 cjg
 * Fixed incorrect "use" line in MultilineCSV export plugin.
